--- a/src/assets/css/icomoon.css
+++ b/src/assets/css/icomoon.css
@@ -1,13 +1,12 @@
 @font-face {
   font-family: "icomoon";
-  src: url("/fonts/icomoon.eot?m31ns");
-  src: url("/fonts/icomoon.eot?m31ns#iefix") format("embedded-opentype"),
-    url("/fonts/icomoon.ttf?m31ns") format("truetype"),
+  src:
+    url("/fonts/icomoon.woff2?m31ns") format("woff2"),
     url("/fonts/icomoon.woff?m31ns") format("woff"),
-    url("/fonts/icomoon.svg?m31ns#icomoon") format("svg");
+    url("/fonts/icomoon.ttf?m31ns") format("truetype");
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 [class^="icon-"],
